--- a/src/main/mobileapp/www/css/app.css
+++ b/src/main/mobileapp/www/css/app.css
@@ -1,5 +1,3 @@
-
-
 ion-content button { 
   margin-top: 10px;
   margin-bottom: 10px;
@@ -12,4 +10,15 @@ ion-content button {
   margin-left: -30px;
   width: 200px;
   max-width: 200px;
+}
+
+.borda { 
+  border-style: solid;
+  border-width: 1px;
+}
+
+.proporcaoimg { 
+  max-width: 100%;
+  width: auto;
+  height: auto;
 }
