--- a/src/main/mobileapp/www/css/app.css
+++ b/src/main/mobileapp/www/css/app.css
@@ -15,10 +15,12 @@ ion-content button {
 .borda { 
   border-style: solid;
   border-width: 1px;
+  height: 290px;
 }
 
 .proporcaoimg { 
   max-width: 100%;
   width: auto;
   height: auto;
+  left: 2px;
 }
