--- a/src/main/mobileapp/www/views/public/tela2.view.html
+++ b/src/main/mobileapp/www/views/public/tela2.view.html
@@ -1,33 +1,35 @@
-<style title="local"></style>
-<ion-view class="pane"> 
-  <ion-header-bar align-title="center" class="bar bar-positive" xattr-theme="bar-positive" data-component="crn-ion-header-bar"> 
-    <div class="buttons buttons-left header-item"> 
-      <button class="button button-clear" menu-toggle="left" data-component="crn-button" xattr-type="button-clear"> <i class="icon ion-navicon"></i> </button> 
-    </div> 
-    <h1 class="title">PANDORA SOTEROPOLITANA</h1> 
-    <div class="buttons buttons-right header-item"> 
-      <button class="button button-clear" menu-toggle="right" data-component="crn-button" xattr-type="button-clear"> <i class="icon ion-navicon"></i> </button> 
-    </div> 
-  </ion-header-bar> 
-  <ion-content data-component="crn-ion-content" class="scroll-content style1139 has-header"> 
-    <div data-replace="false" data-component="crn-container" class="component-holder" id="crn-container-447171"> 
-      <h1 data-component="crn-heading" class="component-holder text-center col-xs-12 col-md-12" id="crn-heading-65922" xattr-position="text-center">Pelourinho</h1> 
-      <div data-replace="false" data-component="crn-container" class="col-md-2 text-center borda col-xs-1" id="crn-container-91761" style="width: 70px; height: 290px;">
-        <img src="img/transporte.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: 290px; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-22961">
-        <img src="img/food.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: 227px; position: absolute; top: 81px; left: 2px; right: -1px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-18621">
-        <img src="img/acessibilidade.png" class="" style="max-width: 75px; max-height: 75px; width: auto; height: auto; position: absolute; top: 157px; left: 2px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-80191">
-      </div>
-      <div data-replace="false" data-component="crn-container" class="col-xs-8 col-md-8 text-center borda" id="crn-container-62231" style="height: 230px"> 
-        <img src="img/favoritar.png" class="proporcaoimg text-center col-xs-1" style="max-width: 90px; max-height: 90px; width: auto; height: auto; position: absolute; top: 175px; left: 103px; right: 0px; bottom: 3px;" xattr-position="center-block" data-component="crn-image" id="crn-image-14681"> 
-        <img src="img/pelo1.jpg" class="col-xs-12 proporcaoimg text-center" style="" xattr-position="center-block" data-component="crn-image" id="crn-image-676126">
-      </div>
-      <div data-replace="false" data-component="crn-container" class="col-md-2 col-xs-2 text-center borda" id="crn-container-45891">
-        <img src="img/localizacao.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: auto; position: absolute; top: 0px; left: 2px; right: -1px; bottom: 1px;" xattr-position="" data-component="crn-image" id="crn-image-65001">
-        <img src="img/lazer.png" class="" style="max-width: 75px; max-height: 75px; width: auto; height: auto; position: absolute; top: 78px; left: 0px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-69651">
-        <img src="img/cash.png" class="" style="max-width: 69px; max-height: 69px; width: auto; height: auto; position: absolute; top: 159px; left: 0px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-95071">
-      </div>
-      <p xattr-position="text-center" class="text-center component-holder col-md-12 col-xs-12" data-component="crn-paragraph" id="crn-paragraph-213495">O Pelourinho, popularmente chamado de Pelô, é o nome de um bairro da cidade de Salvador, no Brasil. Localiza-se no Centro Histórico da cidade, na área que abrange apenas as ruas que vão do Terreiro de Jesus até o Largo do Pelourinho,[1] o qual possui um conjunto arquitetônico colonial barroco brasileiro preservado e integrante do Patrimônio Histórico da Organização das Nações Unidas para a Educação, a Ciência e a Cultura.</p> 
-      <img src="img/back.JPG" class="component-holder col-xs-1" style="width: 102px; height: 102px; position: relative; top: 127px; left: -1px;" xattr-position="" data-component="crn-image" id="crn-image-911">
-    </div> 
-  </ion-content> 
-</ion-view>
+<div id="starter" ng-init="cronapi.client('js.blockly.Local.locais').run()" ng-destroy="" data-component="crn-start" screen-params="">
+  <style title="local"></style> 
+  <ion-view class="pane"> 
+    <ion-header-bar align-title="center" class="bar bar-positive" xattr-theme="bar-positive" data-component="crn-ion-header-bar"> 
+      <div class="buttons buttons-left header-item"> 
+        <button class="button button-clear" menu-toggle="left" data-component="crn-button" xattr-type="button-clear"> <i class="icon ion-navicon"></i> </button> 
+      </div> 
+      <h1 class="title">PANDORA SOTEROPOLITANA</h1> 
+      <div class="buttons buttons-right header-item"> 
+        <button class="button button-clear" menu-toggle="right" data-component="crn-button" xattr-type="button-clear"> <i class="icon ion-navicon"></i> </button> 
+      </div> 
+    </ion-header-bar> 
+    <ion-content data-component="crn-ion-content" class="scroll-content style1139 has-header"> 
+      <div data-replace="false" data-component="crn-container" class="component-holder" id="crn-container-447171"> 
+        <h1 data-component="crn-heading" class="component-holder text-center col-xs-12 col-md-12" id="titulo" xattr-position="text-center">Pelourinho</h1> 
+        <div data-replace="false" data-component="crn-container" class="col-md-2 text-center borda col-xs-1" id="crn-container-91761" style="width: 70px; height: 290px;"> 
+          <a id="a_trans" href="https://www.w3schools.com"><img src="img/transporte.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: 290px; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-22961"></a> 
+          <img src="img/food.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: 227px; position: absolute; top: 81px; left: 2px; right: -1px; bottom: 0px;" xattr-position="" data-component="crn-image" id="iconFood" href="#/app/public/localizacao"> 
+          <img src="img/acessibilidade.png" class="" style="max-width: 75px; max-height: 75px; width: auto; height: auto; position: absolute; top: 157px; left: 2px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-80191"> 
+        </div> 
+        <div data-replace="false" data-component="crn-container" class="col-xs-8 col-md-8 text-center borda" id="crn-container-62231" style="height: 230px"> 
+          <img src="img/favoritar.png" class="proporcaoimg text-center col-xs-1" style="max-width: 90px; max-height: 90px; width: auto; height: auto; position: absolute; top: 175px; left: 103px; right: 0px; bottom: 3px;" xattr-position="center-block" data-component="crn-image" id="crn-image-14681"> 
+          <img src="img/pelo1.jpg" class="col-xs-12 proporcaoimg text-center" style="" xattr-position="center-block" data-component="crn-image" id="imgCentral"> 
+        </div> 
+        <div data-replace="false" data-component="crn-container" class="col-md-2 col-xs-2 text-center borda" id="crn-container-45891"> 
+          <a id="a_loc" href="https://www.w3schools.com"><img src="img/localizacao.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: auto; position: absolute; top: 0px; left: 2px; right: -1px; bottom: 1px;" xattr-position="" data-component="crn-image" id="iconLoc" href="#/app/public/localizacao"></a> 
+          <img src="img/lazer.png" class="" style="max-width: 75px; max-height: 75px; width: auto; height: auto; position: absolute; top: 78px; left: 0px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-69651"> 
+          <img src="img/cash.png" class="" style="max-width: 69px; max-height: 69px; width: auto; height: auto; position: absolute; top: 159px; left: 0px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-95071"> 
+        </div> 
+        <p xattr-position="text-center" class="text-center component-holder col-md-12 col-xs-12" data-component="crn-paragraph" id="resumo">O Pelourinho, popularmente chamado de Pelô, é o nome de um bairro da cidade de Salvador, no Brasil. Localiza-se no Centro Histórico da cidade, na área que abrange apenas as ruas que vão do Terreiro de Jesus até o Largo do Pelourinho,[1] o qual possui um conjunto arquitetônico colonial barroco brasileiro preservado e integrante do Patrimônio Histórico da Organização das Nações Unidas para a Educação, a Ciência e a Cultura.</p> 
+        <img src="img/back.JPG" class="component-holder col-xs-1" style="width: 102px; height: 102px; position: relative; top: 127px; left: -1px;" xattr-position="" data-component="crn-image" id="crn-image-911" ng-click="cronapi.screen.changeView('#/app/public/home', [])"> 
+      </div> 
+    </ion-content> 
+  </ion-view>
+</div>
