--- a/src/main/mobileapp/www/views/public/tela2.view.html
+++ b/src/main/mobileapp/www/views/public/tela2.view.html
@@ -13,7 +13,7 @@
     <ion-content data-component="crn-ion-content" class="scroll-content style1139 has-header"> 
       <div data-replace="false" data-component="crn-container" class="component-holder" id="crn-container-447171"> 
         <h1 data-component="crn-heading" class="component-holder text-center col-xs-12 col-md-12" id="titulo" xattr-position="text-center">Pelourinho</h1> 
-        <div data-replace="false" data-component="crn-container" class="col-md-2 text-center borda col-xs-1" id="crn-container-91761" style="width: 70px; height: 290px;"> 
+        <div data-replace="false" data-component="crn-container" class="col-md-2 text-center borda col-xs-1" id="crn-container-91761" style="width: 70%; height: 290%;"> 
           <a id="a_trans" href="https://www.w3schools.com"><img src="img/transporte.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: 290px; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-22961"></a> 
           <img src="img/food.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: 227px; position: absolute; top: 81px; left: 2px; right: -1px; bottom: 0px;" xattr-position="" data-component="crn-image" id="iconFood" href="#/app/public/localizacao"> 
           <img src="img/acessibilidade.png" class="" style="max-width: 75px; max-height: 75px; width: auto; height: auto; position: absolute; top: 157px; left: 2px; right: 0px; bottom: 0px;" xattr-position="" data-component="crn-image" id="crn-image-80191"> 
