--- a/src/main/mobileapp/www/css/app.css
+++ b/src/main/mobileapp/www/css/app.css
@@ -15,7 +15,7 @@ ion-content button {
 .borda { 
   border-style: solid;
   border-width: 1px;
-  height: 290px;
+  height: 290%;
 }
 
 .proporcaoimg { 
