Commit ajustes tela.

--- a/src/main/mobileapp/www/css/app.css
+++ b/src/main/mobileapp/www/css/app.css
@@ -21,6 +21,6 @@ ion-content button {
 .proporcaoimg { 
   max-width: 100%;
   width: auto;
-  height: auto;
-  left: 2px;
+  height: 69%;
+  left: 50px;
 }
