--- a/src/main/mobileapp/www/views/public/tela3.view.html
+++ b/src/main/mobileapp/www/views/public/tela3.view.html
@@ -25,7 +25,7 @@
         <img src="img/nophoto.png" class="component-holder col-sm-12 col-xs-12" style="" xattr-position="" data-component="crn-image" id="crn-image-86201"> 
       </div>
       <div data-replace="false" data-component="crn-container" class="borda col-xs-8 col-md-8  col-sm-8" id="crn-container-62231"> 
-        <img src="img/nophoto.png" class="component-holder col-xs-12 col-md-12" style="" xattr-position="" data-component="crn-image" id="crn-image-676126"> 
+        <img src="img/nophoto.png" class="component-holder col-xs-12 col-md-12" style="" xattr-position="" data-component="crn-image" id="crn-image-676126"><button class="button button-block button-positive component-holder col-xs-12 col-md-12" type="submit" xattr-fullsize="button-block" xattr-theme="button-positive" ng-click="" data-component="crn-button" id="crn-button-151994"><i class="ion ion-home"></i> <span>Button </span></button><label class="item item-input component-holder col-xs-12 col-md-12" data-component="crn-input" id="crn-input-321395"><input id="crn-input1460" type="text" placeholder="Placeholder text" ng-model="vars.input1460" mask="" keyboard=""></label> 
       </div>
       <div data-replace="false" data-component="crn-container" class="col-xs-2 borda text-center" id="crn-container-59341"> 
         <div style="height: 10%;" data-component="crn-spacer" class="component-holder col-sm-12" id="crn-spacer-15031">
