--- a/src/main/mobileapp/www/views/public/tela2.view.html
+++ b/src/main/mobileapp/www/views/public/tela2.view.html
@@ -1,5 +1,16 @@
 <div id="starter" ng-init="cronapi.client('js.blockly.Local.locais').run()" ng-destroy="" data-component="crn-start" screen-params="">
-  <style title="local"></style> 
+  <style title="local">
+#iconFood { 
+  margin-right: -1px;
+  padding-top: 2px;
+  padding-left: 2px;
+}
+
+#crn-image-22961 { 
+  padding-top: 6px;
+  padding-right: 6px;
+}
+</style> 
   <ion-view class="pane"> 
     <ion-header-bar align-title="center" class="bar bar-positive" xattr-theme="bar-positive" data-component="crn-ion-header-bar"> 
       <div class="buttons buttons-left header-item"> 
@@ -10,23 +21,23 @@
         <button class="button button-clear" menu-toggle="right" data-component="crn-button" xattr-type="button-clear"> <i class="icon ion-navicon"></i> </button> 
       </div> 
     </ion-header-bar> 
-    <ion-content data-component="crn-ion-content" class="scroll-content style1139 has-header"> 
+    <ion-content data-component="crn-ion-content" class="scroll-content style1139 has-header" style="top: 2%;"> 
       <div data-replace="false" data-component="crn-container" class="component-holder" id="crn-container-447171"> 
-        <h1 data-component="crn-heading" class="component-holder text-center col-xs-12 col-md-12" id="titulo" xattr-position="text-center" style="left: 0px; position: relative;">Pelourinho</h1> 
-        <div data-replace="false" data-component="crn-container" class="col-md-2 text-center borda col-xs-1" id="crn-container-91761" style="width: 14%; height: 235px; padding-right: 0px; left: 0px;"> 
-          <a id="a_trans"><img src="img/transporte.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: auto; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; padding-right: 8px;" xattr-position="" data-component="crn-image" id="crn-image-22961"></a> 
-          <img src="img/food.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: 227px; position: absolute; top: 81px; left: 2px; right: 0px; bottom: 0px; padding-right: 10px;" xattr-position="" data-component="crn-image" id="iconFood" href="#/app/public/localizacao"> 
-          <img src="img/acessibilidade.png" class="" style="max-width: 75px; max-height: 75px; width: auto; height: auto; position: absolute; top: 157px; left: 0px; right: 0px; bottom: 0px; padding-right: 11px;" xattr-position="" data-component="crn-image" id="crn-image-80191"> 
+        <h1 data-component="crn-heading" class="component-holder text-center col-xs-12 col-md-12" id="titulo" xattr-position="text-center" style="left: 0px; position: relative; top: 62%; bottom: 0px; margin-top: 30px;">Pelourinho</h1> 
+        <div data-replace="false" data-component="crn-container" class="col-md-2 text-center borda col-xs-1" id="crn-container-91761" style="width: 18%;height: 235px;padding-right: 0px;left: 5px;"> 
+          <a id="a_trans" href="#/app/public/localizacao?qs=1"><img src="img/transporte.png" class="" style="max-width: 65px; max-height: 65px; width: auto; height: auto; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; padding-right: 3px; padding-top: 3px;" xattr-position="" data-component="crn-image" id="crn-image-22961"></a> 
+           
+          <img src="img/acessibilidade.png" class="" style="max-width: 75px; max-height: 75px; width: auto; height: auto; position: absolute; top: 157px; left: 0px; right: 0px; bottom: 0px; padding-right: 11px;" xattr-position="" data-component="crn-image" id="crn-image-80191"><img src="img/food.png" class="col-xs-12" style="max-width: 69px; max-height: 71px; width: auto; height: 199px; position: absolute; top: 77px; left: -1%; right: -1px; bottom: 0px; padding-right: 4px;" xattr-position="" data-component="crn-image" id="iconFood" href="#/app/public/localizacao"> 
         </div> 
         <div data-replace="false" data-component="crn-container" class="borda" id="crn-container-62231" style=""> 
-          <img src="img/favoritar.png" class="proporcaoimg text-center col-xs-1" style="max-width: 90px; max-height: 90px; width: auto; height: 61px; position: absolute; top: 11%; left: 33%; right: 0px; bottom: 0px;" xattr-position="center-block" data-component="crn-image" id="crn-image-14681"> 
-          <img src="img/pelo1.jpg" class="proporcaoimg text-center col-xs-1" style="position: absolute; width: 235px; padding-top: 10px; padding-right: 25px; height: 150px; left: 56px; right: 0px; top: 67px; max-width: 67%;" xattr-position="center-block" data-component="crn-image" id="imgCentral"> 
+           
+          <img src="img/pelo1.jpg" class="text-center col-xs-1" style="position: relative; width: 58%; padding-top: 24px; padding-right: 0px; height: 7%; right: 0px; left: 2%; top: 3%; max-width: 58%;" xattr-position="center-block" data-component="crn-image" id="imgCentral">
         </div> 
-        <div data-replace="false" data-component="crn-container" class="col-md-2 col-xs-2 text-center borda" id="crn-container-45891" style="width: 14%; height: 235px; right: 11px; left: 55%; position: relative;"> 
-          <a id="a_loc"><img src="img/localizacao.png" class="" style="max-width: 62px; max-height: 60px; width: auto; height: auto; position: absolute; top: 0px; left: 3px; right: 3px; bottom: 1px; padding-right: 8px;" xattr-position="" data-component="crn-image" id="iconLoc" href="#/app/public/localizacao"></a> 
+        <div data-replace="false" data-component="crn-container" class="col-md-2 text-center borda col-xs-1" id="crn-container-91761" style="width: 17%;height: 235px;padding-right: 0px;left: 20px;"> 
+          <a id="a_loc" href="#/app/public/localizacao?qs=1"><img src="img/localizacao.png" class="" style="max-width: 62px; max-height: 60px; width: auto; height: auto; position: absolute; top: 0px; left: 3px; right: 3px; bottom: 1px; padding-right: 8px;" xattr-position="" data-component="crn-image" id="iconLoc" href="#/app/public/localizacao"></a> 
           <img src="img/lazer.png" class="center-block" style="max-width: 75px; max-height: 75px; width: auto; height: auto; position: absolute; top: 78px; left: 0px; right: 0px; bottom: 0px; padding-right: 11px;" xattr-position="center-block" data-component="crn-image" id="crn-image-69651"> 
           <img src="img/cash.png" class="" style="max-width: 69px; max-height: 69px; width: auto; height: auto; position: absolute; top: 159px; left: 0px; right: 0px; bottom: 0px; padding-right: 12px;" xattr-position="" data-component="crn-image" id="crn-image-95071"> 
-        </div> 
+        </div>
         <p xattr-position="text-center" class="text-center component-holder col-md-12 col-xs-1" data-component="crn-paragraph" id="resumo" style="width: 432px; height: 157px;">O Pelourinho, popularmente chamado de Pelô, é o nome de um bairro da cidade de Salvador, no Brasil. Localiza-se no Centro Histórico da cidade, na área que abrange apenas as ruas que vão do Terreiro de Jesus até o Largo do Pelourinho,[1] o qual possui um conjunto arquitetônico colonial barroco brasileiro preservado e integrante do Patrimônio Histórico da Organização das Nações Unidas para a Educação, a Ciência e a Cultura.</p> 
         <img src="img/back.JPG" class="component-holder col-xs-1" style="width: 102px; height: 102px; position: relative; top: 1456px; left: -1px;" xattr-position="" data-component="crn-image" id="crn-image-911" ng-click="cronapi.screen.changeView('#/app/public/home', [])"> 
       </div> 
