--- a/src/main/mobileapp/www/views/public/tela2.view.html
+++ b/src/main/mobileapp/www/views/public/tela2.view.html
@@ -21,7 +21,7 @@
         <button class="button button-clear" menu-toggle="right" data-component="crn-button" xattr-type="button-clear"> <i class="icon ion-navicon"></i> </button> 
       </div> 
     </ion-header-bar> 
-    <ion-content data-component="crn-ion-content" class="scroll-content style1139 has-header" style="top: 2%;"> 
+    <ion-content data-component="crn-ion-content" class="scroll-content has-header" style=""> 
       <div data-replace="false" data-component="crn-container" class="component-holder" id="crn-container-447171"> 
         <h1 data-component="crn-heading" class="component-holder text-center col-xs-12 col-md-12" id="titulo" xattr-position="text-center" style="left: 0px; position: relative; top: 62%; bottom: 0px; margin-top: 30px;">Pelourinho</h1> 
         <div data-replace="false" data-component="crn-container" class="col-md-2 text-center borda col-xs-1" id="crn-container-91761" style="width: 18%;height: 235px;padding-right: 0px;left: 5px;"> 
@@ -39,7 +39,7 @@
           <img src="img/cash.png" class="" style="max-width: 69px; max-height: 69px; width: auto; height: auto; position: absolute; top: 159px; left: 0px; right: 0px; bottom: 0px; padding-right: 12px;" xattr-position="" data-component="crn-image" id="crn-image-95071"> 
         </div>
         <img src="img/favoritar.png" style="width: 100px; left: 138px; top: -1px; position: relative; margin-top: -30px;" class="col-sm-12 text-center center-block col-xs-12" xattr-position="center-block" data-component="crn-image" id="crn-image-37031"><p xattr-position="text-center" class="text-center component-holder col-md-12 col-xs-1" data-component="crn-paragraph" id="resumo" style="width: 432px; height: 157px;">O Pelourinho, popularmente chamado de Pelô, é o nome de um bairro da cidade de Salvador, no Brasil. Localiza-se no Centro Histórico da cidade, na área que abrange apenas as ruas que vão do Terreiro de Jesus até o Largo do Pelourinho,[1] o qual possui um conjunto arquitetônico colonial barroco brasileiro preservado e integrante do Patrimônio Histórico da Organização das Nações Unidas para a Educação, a Ciência e a Cultura.</p> 
-        <img src="img/back.JPG" class="component-holder col-xs-1" style="width: 102px; height: 102px; position: relative; top: 1456px; left: -1px;" xattr-position="" data-component="crn-image" id="crn-image-911" ng-click="cronapi.screen.changeView('#/app/public/home', [])"> 
+        <img src="img/back.JPG" class="component-holder col-xs-1" style="width: 102px;height: 102px;position: relative;top: 38px;left: -1px;" xattr-position="" data-component="crn-image" id="crn-image-911" ng-click="cronapi.screen.changeView('#/app/public/home', [])">
       </div> 
     </ion-content> 
   </ion-view>
