--- a/src/main/mobileapp/www/css/app.css
+++ b/src/main/mobileapp/www/css/app.css
@@ -13,8 +13,7 @@ ion-content button {
 }
 
 .borda { 
-  border-style: solid;
-  border-width: 1px;
+  border: 1px solid rgb(255, 255, 255);
   height: 290%;
 }
 
