--- a/src/main/mobileapp/www/views/public/transporte.view.html
+++ b/src/main/mobileapp/www/views/public/transporte.view.html
@@ -23,7 +23,7 @@
       <div data-replace="true" data-component="crn-container" class="component-holder col-xs-12" id="crn-container-525015">
          &nbsp; 
       </div>
-      <h2 data-component="crn-heading" class="component-holder col-xs-12" id="titleLocal">Title</h2> 
+      <h2 data-component="crn-heading" class="component-holder col-xs-12" id="titleLocal">Nome_Local</h2> 
       <div style="height: 30px;" data-component="crn-spacer" class="component-holder col-xs-12" id="crn-spacer-540186">
         &nbsp;
       </div>
