--- a/src/main/mobileapp/www/views/public/transporte.view.html
+++ b/src/main/mobileapp/www/views/public/transporte.view.html
@@ -33,7 +33,7 @@
       <div style="height: 30px;" data-component="crn-spacer" class="component-holder col-xs-12" id="crn-spacer-455352">
          &nbsp; 
       </div> 
-      <img src="img/back.JPG" class="component-holder col-xs-1 center-block" style="width: 100px;" xattr-position="center-block" data-component="crn-image" id="crn-image-49201" ng-click="cronapi.client('js.blockly.Localizacao.voltar').run()"> 
-    </ion-content> 
+      <img src="img/Voltar legenda.png" class="component-holder col-xs-1 center-block" style="width: 100px;" xattr-position="center-block" data-component="crn-image" id="crn-image-49201" ng-click="cronapi.client('js.blockly.Localizacao.voltar').run()"> 
+    <img src="img/transporte legenda.png" class="" style="max-width: 98px; max-height: 65px; width: 59px; height: 65px; position: absolute; top: 92px; left: 363px; right: 0px; bottom: 0px; padding-right: 0px; padding-top: 0px;" xattr-position="" data-component="crn-image" id="crn-image-83951" href="#/app/public/transporte"></ion-content> 
   </ion-view>
 </div>
