--- a/src/main/mobileapp/www/views/public/favoritar.view.html
+++ b/src/main/mobileapp/www/views/public/favoritar.view.html
@@ -28,12 +28,12 @@
         &nbsp;
       </div>
       <div style="position: relative; overflow: hidden; padding-bottom: 56.25%; height: 300px; width: 100%;" data-component="crn-video" class="component-holder col-xs-12" id="map"> 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2262.020429317576!2d-38.51052636174569!3d-13.000488546203997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049fbb02e667%3A0x8f20f7c335e687c3!2sInstituto%20de%20Matem%C3%A1tica%20(UFBA)%20-%20Campus%20Ondina!5e0!3m2!1spt-BR!2sbr!4v1568497810683!5m2!1spt-BR!2sbr" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%" id="iframemap"></iframe> 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2262.020429317576!2d-38.51052636174569!3d-13.000488546203997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049fbb02e667%3A0x8f20f7c335e687c3!2sInstituto%20de%20Matem%C3%A1tica%20(UFBA)%20-%20Campus%20Ondina!5e0!3m2!1spt-BR!2sbr!4v1568497810683!5m2!1spt-BR!2sbr" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%" id="iframemap"></iframe> 
       </div> 
       <div style="height: 30px;" data-component="crn-spacer" class="component-holder col-xs-12" id="crn-spacer-455352">
          &nbsp; 
       </div> 
-      <img src="img/back.JPG" class="component-holder col-xs-1 center-block" style="width: 100px;" xattr-position="center-block" data-component="crn-image" id="crn-image-49201" ng-click="cronapi.client('js.blockly.Localizacao.voltar').run()"> 
-    </ion-content> 
+      <img src="img/Voltar legenda.png" class="component-holder col-xs-1 center-block" style="width: 100px;" xattr-position="center-block" data-component="crn-image" id="crn-image-49201" ng-click="cronapi.client('js.blockly.Localizacao.voltar').run()"> 
+    <img src="img/favoritar legenda.png" style="width: 100px; left: 234px; top: -1px; position: relative; margin-top: -30px;" class="col-sm-12 text-center center-block col-xs-12" xattr-position="center-block" data-component="crn-image" id="crn-image-62071" href="#/app/public/favoritar"></ion-content> 
   </ion-view>
 </div>
