--- a/src/main/mobileapp/www/views/public/transporte.view.html
+++ b/src/main/mobileapp/www/views/public/transporte.view.html
@@ -20,9 +20,7 @@
          &nbsp; 
       </div> 
       <h1 data-component="crn-heading" class="component-holder col-xs-12 text-center" id="crn-heading-1008938" xattr-position="text-center">Como chegar</h1>
-      <div data-replace="true" data-component="crn-container" class="component-holder col-xs-12" id="crn-container-525015">
-         &nbsp; 
-      </div>
+      <div data-replace="false" data-component="crn-container" class="component-holder col-xs-12" id="crn-container-525015"><img src="img/transporte legenda.png" class="" style="max-width: 65px; max-height: 65px; width: 65px; height: 65px; position: absolute; top: -1px; left: 361px; right: 0px; bottom: 0px; padding-right: 3px; padding-top: 3px;" xattr-position="" data-component="crn-image" id="crn-image-53741" href="#/app/public/transporte"></div>
       <h2 data-component="crn-heading" class="component-holder col-xs-12" id="titleLocal">Nome_Local</h2> 
       <div style="height: 30px;" data-component="crn-spacer" class="component-holder col-xs-12" id="crn-spacer-540186">
         &nbsp;
@@ -33,7 +31,7 @@
       <div style="height: 30px;" data-component="crn-spacer" class="component-holder col-xs-12" id="crn-spacer-455352">
          &nbsp; 
       </div> 
-      <img src="img/back.JPG" class="component-holder col-xs-1 center-block" style="width: 100px;" xattr-position="center-block" data-component="crn-image" id="crn-image-49201" ng-click="cronapi.client('js.blockly.Localizacao.voltar').run()"> 
+      <img src="img/Voltar legenda.png" class="component-holder col-xs-1 center-block" style="width: 100px;" xattr-position="center-block" data-component="crn-image" id="crn-image-49201" ng-click="cronapi.client('js.blockly.Localizacao.voltar').run()"> 
     </ion-content> 
   </ion-view>
 </div>
