--- a/src/main/mobileapp/www/views/public/favoritar.view.html
+++ b/src/main/mobileapp/www/views/public/favoritar.view.html
@@ -20,7 +20,7 @@
          &nbsp; 
       </div> 
       <h1 data-component="crn-heading" class="component-holder col-xs-12 text-center" id="crn-heading-1008938" xattr-position="text-center">PARABÉNS! Este lugar é inesquecível para você!</h1>
-      <div data-replace="false" data-component="crn-container" class="component-holder col-xs-12" id="crn-container-525015"><img src="img/favoritar.png" class="proporcaoimg text-center col-xs-1" style="width: 121px; height: 81px; left: 298px;" xattr-position="center-block" data-component="crn-image" id="crn-image-81531"></div>
+      <div data-replace="false" data-component="crn-container" class="component-holder col-xs-12" id="crn-container-525015"><img src="img/favoritar.png" class="proporcaoimg text-center col-xs-1" style="width: 65px; height: 65px; left: 225px !important; max-width: 65px; max-height: 65px;" xattr-position="center-block" data-component="crn-image" id="crn-image-81531"></div>
       <h2 data-component="crn-heading" class="component-holder col-xs-12" id="titleLocal">Nome_Local</h2> 
       <div style="height: 30px;" data-component="crn-spacer" class="component-holder col-xs-12" id="crn-spacer-540186">
         &nbsp;
