--- a/src/main/mobileapp/www/views/public/transporte.view.html
+++ b/src/main/mobileapp/www/views/public/transporte.view.html
@@ -20,7 +20,7 @@
          &nbsp; 
       </div> 
       <h1 data-component="crn-heading" class="component-holder col-xs-12 text-center" id="crn-heading-1008938" xattr-position="text-center">Como chegar</h1>
-      <div data-replace="false" data-component="crn-container" class="component-holder col-xs-12" id="crn-container-525015"><img src="img/transporte legenda.png" class="" style="max-width: 65px; max-height: 65px; width: 65px; height: 65px; position: absolute; top: -1px; left: 361px; right: 0px; bottom: 0px; padding-right: 3px; padding-top: 3px;" xattr-position="" data-component="crn-image" id="crn-image-53741" href="#/app/public/transporte"></div>
+      <div data-replace="false" data-component="crn-container" class="component-holder col-xs-12" id="crn-container-525015"><img src="img/transporte legenda.png" class="" style="max-width: 65px; max-height: 65px; width: 65px; height: 65px; position: absolute; top: -1px; left: 225px !important; right: 0px; bottom: 0px; padding-right: 3px; padding-top: 3px;" xattr-position="" data-component="crn-image" id="crn-image-53741" href="#/app/public/transporte"></div>
       <h2 data-component="crn-heading" class="component-holder col-xs-12" id="titleLocal">Nome_Local</h2> 
       <div style="height: 30px;" data-component="crn-spacer" class="component-holder col-xs-12" id="crn-spacer-540186">
         &nbsp;
